[package]
name = "v1-sort"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
num-bigint = "0.2.3"
num-traits = "0.2.8"
rayon = "1.2.0"
lazy_static = "1.4.0"
